Z-index fix

--- a/src/styles/sass/foundation/global/_head.scss
+++ b/src/styles/sass/foundation/global/_head.scss
@@ -16,7 +16,7 @@
 	max-width: $mq-1440;
 	z-index: 9999;
 	justify-content: space-between;
-	transform: translate3d(0,0,0);
+	// transform: translate3d(0,0,0);
 
 	nav{
 		flex-shrink: 0;
